@@ -1,5 +1,12 @@
 2002-06-13  Michael Thome  <mthome@bbn.com>
 
+	* TimeServiceProvider, NaturalTimeService, RealTimeService,
+	TimeServiceBase, SimpleAgent, NodeAgent
+	Start of refactoring the Timer/Alarm facilities.  Moves hookup to
+	NodeAgent, with a root service available to Agents.  Abstracts the
+	interface from the actual Timers. Also removes alarms when agent
+	is unloaded, fixing bug 989.
+	
 	* Heartbeat, SimpleAgent, NodeAgent
 	Refactored the Heartbeat functionality into a new class connected
 	to NodeAgent rather than a static in SimpleAgent.
